Bug 103808 - [radeonsi, bisected] World of Warcraft scribbling all over screen
Summary: [radeonsi, bisected] World of Warcraft scribbling all over screen
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
: 103817 103874 103919 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-18 15:07 UTC by Chris Rankin
Modified: 2017-12-02 15:02 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
apitrace for WoW (116.80 MB, application/xz)
2017-11-20 21:54 UTC, Chris Rankin
Details
apitrace for Path of Exile (81.07 MB, application/gzip)
2017-11-27 12:15 UTC, Felix Hellmann
Details

Description Chris Rankin 2017-11-18 15:07:43 UTC
OpenGL renderer string: AMD BONAIRE (DRM 2.50.0 / 4.13.13, LLVM 6.0.0)
OpenGL core profile version string: 3.3 Mesa 17.4.0-devel (git-4b0dc098b2)

Now that Fedora has upgraded to libdrm-2.4.88, I have discovered that World of Warcraft now has huge screen corruption with Mesa-git. A git bisect has identified this commit as the culprit:

4b0dc098b2561c07c59f7dab2813640a25789bf1 is the first bad commit
commit 4b0dc098b2561c07c59f7dab2813640a25789bf1
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Thu Nov 2 00:00:53 2017 +0100

    gallium/u_threaded: don't map big VRAM buffers for the first upload directly
    
    This improves Paraview "many spheres" performance 4x along with the radeonsi
    commit.
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

:040000 040000 7b3cd35a0bc5923f724cfb9d936f7a88ea808c8a 300c7a5176280a410796121ac66c04a3b39b9bc9 M	src

WoW continues to run, but UI elements in particular disappear and are replaced with scribbles across the screen, which itself flickers and flashes.
Comment 1 Marek Olšák 2017-11-20 16:28:37 UTC
Can you upload an apitrace?
Comment 2 Chris Rankin 2017-11-20 21:54:42 UTC
Created attachment 135620 [details]
apitrace for WoW
Comment 3 Chris Rankin 2017-11-20 22:01:22 UTC
There's some initial chaos when you start replaying this trace, but I think the most relevant artifacts (from this bug's perspective) occur right at the end.
Comment 4 Nicolai Hähnle 2017-11-27 10:32:56 UTC
*** Bug 103817 has been marked as a duplicate of this bug. ***
Comment 5 Nicolai Hähnle 2017-11-27 10:40:46 UTC
*** Bug 103874 has been marked as a duplicate of this bug. ***
Comment 6 Felix Hellmann 2017-11-27 12:12:46 UTC
*** Bug 103919 has been marked as a duplicate of this bug. ***
Comment 7 Felix Hellmann 2017-11-27 12:15:24 UTC
Created attachment 135737 [details]
apitrace for Path of Exile

Added the apitrace I made in #103919 over here.
Comment 8 Shmerl 2017-11-28 04:38:57 UTC
Marek pushed this fix: https://cgit.freedesktop.org/mesa/mesa/commit/?id=b5444877c0820b7848c07d1bc4e9a706f90894a5

I've just tested it with The Witcher 3 in Wine, and flickering is gone along with performance drop!
Comment 9 Felix Hellmann 2017-11-28 20:52:45 UTC
Yeah WoW and PoE are also fixed here
Comment 10 Chris Rankin 2017-11-28 22:23:00 UTC
Agreed, WoW is now fixed. Thanks.
Comment 11 bartos.petr 2017-11-29 08:08:56 UTC
Confirming bug 103919 is also fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.